--- a/package.json
+++ b/package.json
@@ -11,27 +11,37 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "formidable": "^3.5.0",
     "jose": "^5.1.0",
     "lucide-react": "^0.263.1",
     "multer": "^1.4.5-lts.1",
     "next": "^15.0.0",
+    "next-themes": "^0.4.6",
     "openai": "^4.20.0",
     "postcss": "^8.4.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-hook-form": "^7.60.0",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0",
     "zod": "^3.22.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/bcryptjs": "^2.4.0",
     "@types/formidable": "^3.4.0",
     "@types/multer": "^1.4.0",
